# rxoobl-demo

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: temporal-cloud.md  workflow-architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.tsx  scenarios.ts  styles.css  types.ts
scripts/: reset_demo.sh  run_temporal_cloud_api.sh  run_temporal_cloud_worker.sh
scripts/deploy/: build_deployment_docker_image.sh  build_deployment_package.sh  rebuild_and_push_ecr_amd64.sh  set_current_worker_version.sh
tests/: conftest.py  test_api.py  test_rules.py  test_settings.py  test_workflows.py
trusted_friends/: __init__.py  activities.py  api.py  models.py  rules.py  settings.py  temporal_client.py  versioning.py  worker.py  workflows.py
